Added game list and loading of icons and cue sounds

--- a/core/assets/localization/default.properties
+++ b/core/assets/localization/default.properties
@@ -1,3 +1,17 @@
 gamename=Rhythm Heaven Audio Remixer
 
 status.start=Create a new remix or open an existing project.
+
+cue.timing.cowbell=cowbell
+cue.timing.1=1
+cue.timing.2=2
+cue.timing.3=3
+cue.timing.4=4
+cue.timing.and=and
+cue.timing.go=go!
+
+cue.lockstep.step=step
+cue.lockstep.hee=hee
+cue.lockstep.ha=ha
+cue.lockstep.hai=hai
+cue.lockstep.ho=ho
