Lockstep cues and stuff

--- a/core/assets/localization/default.properties
+++ b/core/assets/localization/default.properties
@@ -1,6 +1,7 @@
 gamename=Rhythm Heaven Audio Remixer
 
 status.start=Create a new remix or open an existing project.
+status.nothing=
 
 cue.timing.cowbell=cowbell
 cue.timing.1=1
