--- a/core/assets/localization/default.properties
+++ b/core/assets/localization/default.properties
@@ -1,18 +1,12 @@
 gamename=Rhythm Heaven Audio Remixer
 
-status.start=Create a new remix or open an existing project.
-status.nothing=
-
-cue.timing.cowbell=cowbell
-cue.timing.1=1
-cue.timing.2=2
-cue.timing.3=3
-cue.timing.4=4
-cue.timing.and=and
-cue.timing.go=go!
-
-cue.lockstep.step=step
-cue.lockstep.hee=hee
-cue.lockstep.ha=ha
-cue.lockstep.hai=hai
-cue.lockstep.ho=ho
+cue_lockstep_hai=hai
+cue_lockstep_bkbt_ha=backbeat\nha
+cue_lockstep_bkbt_hoi=backbeat\nhoi
+cue_lockstep_bkbt_boh=backbeat\nboh
+cue_lockstep_return_hee=return\nhee
+cue_lockstep_return_ha=return\nha
+cue_lockstep_march1=march1
+cue_lockstep_march2=march2
+cue_lockstep_march1_bkbt=backbeat\nmarch1
+cue_lockstep_march2_bkbt=backbeat\nmarch2
