Added Munchy Monk + Donk-Donk cues

--- a/core/assets/localization/default.properties
+++ b/core/assets/localization/default.properties
@@ -10,3 +10,24 @@ cue_lockstep_march1=march1
 cue_lockstep_march2=march2
 cue_lockstep_march1_bkbt=backbeat\nmarch1
 cue_lockstep_march2_bkbt=backbeat\nmarch2
+
+cue_munchyMonk_gulp=gulp
+cue_munchyMonk_gulp3-1=cue for 3\ngulp1
+cue_munchyMonk_gulp3-2=cue for 3\ngulp2
+cue_munchyMonk_gulp3-3=cue for 3\ngulp3
+cue_munchyMonk_one=one!
+cue_munchyMonk_three=three!
+cue_munchyMonk_try=try~
+cue_munchyMonk_two=two!
+
+cue_donkDonk_blastoff=blast off
+cue_donkDonk_deetdeetdoot1=deetdeetdoot1
+cue_donkDonk_deetdeetdoot2=deetdeetdoot2
+cue_donkDonk_deetdeetdoot3=deetdeetdoot3
+cue_donkDonk_deetdeetduh1=deetdeetduh1
+cue_donkDonk_deetdeetduh2=deetdeetduh2
+cue_donkDonk_deetdeetduh3=deetdeetduh3
+cue_donkDonk_donk1=donk~
+cue_donkDonk_donk2=donk!
+cue_donkDonk_dwonk1=dwonk~
+cue_donkDonk_dwonk2=DWONK!
