Added name and sorting by alphabetical order

--- a/core/assets/localization/default.properties
+++ b/core/assets/localization/default.properties
@@ -1,5 +1,9 @@
 gamename=Rhythm Heaven Audio Remixer
 
+game.lockstep=Lockstep
+game.munchyMonk=Munchy Monk
+game.donkDonk=Donk-Donk
+
 cue_lockstep_hai=hai
 cue_lockstep_bkbt_ha=backbeat\nha
 cue_lockstep_bkbt_hoi=backbeat\nhoi
