Added tap troupe

--- a/core/assets/localization/default.properties
+++ b/core/assets/localization/default.properties
@@ -3,6 +3,7 @@ gamename=Rhythm Heaven Audio Remixer
 game.lockstep=Lockstep
 game.munchyMonk=Munchy Monk
 game.donkDonk=Donk-Donk
+game.tapTroupe=Tap Troupe
 
 cue_lockstep_hai=hai
 cue_lockstep_bkbt_ha=backbeat\nha
@@ -35,3 +36,17 @@ cue_donkDonk_donk1=donk~
 cue_donkDonk_donk2=donk!
 cue_donkDonk_dwonk1=dwonk~
 cue_donkDonk_dwonk2=DWONK!
+
+cue_tapTroupe_and=and
+cue_tapTroupe_bombom1=bombom\nbom~
+cue_tapTroupe_bombom2=bombom\nbom!
+cue_tapTroupe_ok1=ok1\nnormal
+cue_tapTroupe_ok2=ok2\nexcited
+cue_tapTroupe_ready1=ready\nrea~
+cue_tapTroupe_ready2=ready\n-dy!
+cue_tapTroupe_step1=step1
+cue_tapTroupe_step2=step2
+cue_tapTroupe_tapNook=loud tap
+cue_tapTroupe_taptaptap1=taptaptap\ntap1
+cue_tapTroupe_taptaptap2=taptaptap\ntap2
+cue_tapTroupe_taptaptap3=taptaptap\ntap3!
