Added so many things that I forgot

--- a/core/assets/localization/default.properties
+++ b/core/assets/localization/default.properties
@@ -1,5 +1,14 @@
 gamename=Rhythm Heaven Audio Remixer
 
+menu.exitWarning=Are you sure you want to exit?\nAll unsaved changes will be lost.
+menu.newWarning=Are you sure you want to start a new remix?\nAll unsaved changes will be lost.
+menu.openWarning=Are you sure you want to open an existing remix?\nAll unsaved changes will be lost.
+menu.music=Music: {0}
+menu.musicInvalid=[RED]Failed to load![]: {0}
+
+editor.beat=beat 
+editor.musicStart=music start 
+
 game.lockstep=Lockstep
 game.munchyMonk=Munchy Monk
 game.donkDonk=Donk-Donk
