Added music playback with delete

--- a/core/assets/localization/default.properties
+++ b/core/assets/localization/default.properties
@@ -5,6 +5,7 @@ menu.newWarning=Are you sure you want to start a new remix?\nAll unsaved changes
 menu.openWarning=Are you sure you want to open an existing remix?\nAll unsaved changes will be lost.
 menu.music=Music: {0}
 menu.musicInvalid=[RED]Failed to load![]: {0}
+menu.clearMusicWarning=Are you sure you want to have no music?\nMusic's pretty important...
 
 editor.beat=beat 
 editor.musicStart=music start 
