Added count in cues

--- a/core/assets/localization/default.properties
+++ b/core/assets/localization/default.properties
@@ -14,6 +14,14 @@ game.lockstep=Lockstep
 game.munchyMonk=Munchy Monk
 game.donkDonk=Donk-Donk
 game.tapTroupe=Tap Troupe
+game.countIn=Counting Cues
+
+cue_countIn_and=and
+cue_countIn_cowbell=cowbell
+cue_countIn_one=one
+cue_countIn_two=two
+cue_countIn_three=three
+cue_countIn_four=four
 
 cue_lockstep_hai=hai
 cue_lockstep_bkbt_ha=backbeat\nha
