Changed cues game name to not be so game-like

--- a/core/assets/localization/default.properties
+++ b/core/assets/localization/default.properties
@@ -14,7 +14,7 @@ game.lockstep=Lockstep
 game.munchyMonk=Munchy Monk
 game.donkDonk=Donk-Donk
 game.tapTroupe=Tap Troupe
-game.countIn=Counting Cues
+game.countIn=[PINK]Cues:[] Count-ins
 
 cue_countIn_and=and
 cue_countIn_cowbell=cowbell
