Added saving and loading capabilities

--- a/core/assets/localization/default.properties
+++ b/core/assets/localization/default.properties
@@ -6,6 +6,9 @@ menu.openWarning=Are you sure you want to open an existing remix?\nAll unsaved c
 menu.music=Music: {0}
 menu.musicInvalid=[RED]Failed to load![]: {0}
 menu.clearMusicWarning=Are you sure you want to have no music?\nMusic's pretty important...
+menu.failedOpen=Failed to open the remix file. Error details in console (F8+C).
+menu.failedSave=Failed to save the remix file. Error details in console (F8+C).
+menu.successOpen=Opened successfully. Please note that music should be reloaded, if any.
 
 editor.beat=beat 
 editor.musicStart=music start 
