Added tap trial

--- a/core/assets/localization/default.properties
+++ b/core/assets/localization/default.properties
@@ -18,6 +18,7 @@ game.munchyMonk=Munchy Monk
 game.donkDonk=Donk-Donk
 game.tapTroupe=Tap Troupe
 game.countIn=[PINK]Cues:[] Count-ins
+game.tapTrial=Tap Trial
 
 cue_countIn_and=and
 cue_countIn_cowbell=cowbell
@@ -71,3 +72,14 @@ cue_tapTroupe_tapNook=loud tap
 cue_tapTroupe_taptaptap1=taptaptap\ntap1
 cue_tapTroupe_taptaptap2=taptaptap\ntap2
 cue_tapTroupe_taptaptap3=taptaptap\ntap3!
+
+cue_tapTrial_jumptap1_tap=jumptap1\ntap
+cue_tapTrial_jumptap1=jumptap1\nscream
+cue_tapTrial_jumptap2_tap=jumptap2\ntap
+cue_tapTrial_jumptap2=jumptap2\nscream
+cue_tapTrial_ook=ook
+cue_tapTrial_ooki1=ooki\nook-
+cue_tapTrial_ooki2=ooki\nKI!
+cue_tapTrial_ookook1=ook-ook\nook-
+cue_tapTrial_ookook2=ook-ook\n~ook!
+cue_tapTrial_tap=tap
