Added special message if a file dialog is open

--- a/core/assets/localization/default.properties
+++ b/core/assets/localization/default.properties
@@ -9,6 +9,8 @@ menu.clearMusicWarning=Are you sure you want to have no music?\nMusic's pretty i
 menu.failedOpen=Failed to open the remix file. Error details in console (F8+C).
 menu.failedSave=Failed to save the remix file. Error details in console (F8+C).
 menu.successOpen=Opened successfully. Please note that music should be reloaded, if any.
+menu.successSave=Saved successfully.
+menu.dialogOpen=A file dialog is open - it may be behind this window.
 
 editor.beat=beat 
 editor.musicStart=music start 
