Added ringside cue LOCALIZATION - 56 cues!
that is a lot

--- a/core/assets/localization/default.properties
+++ b/core/assets/localization/default.properties
@@ -85,3 +85,61 @@ cue_tapTrial_ooki2=ooki\nKI!
 cue_tapTrial_ookook1=ook-ook\nook-
 cue_tapTrial_ookook2=ook-ook\n~ook!
 cue_tapTrial_tap=tap
+
+cue_ringside_ye=ye
+cue_ringside_yell=yell
+cue_ringside_camera=camera
+cue_ringside_muscles1=muscles1
+cue_ringside_muscles2=muscles2
+cue_ringside_wubba1-1=question1\nwub
+cue_ringside_wubba1-2=question1\n-ba
+cue_ringside_dubba1-1=question1\ndub
+cue_ringside_dubba1-2=question1\n-ba
+cue_ringside_dubba1-3=question1\nDUB
+cue_ringside_dubba1-4=question1\n-BA
+cue_ringside_that1=question1\nthat
+cue_ringside_true1=question1\ntrue?
+cue_ringside_wubba2-1=question2\nwub
+cue_ringside_wubba2-2=question2\n-ba
+cue_ringside_dubba2-1=question2\ndub
+cue_ringside_dubba2-2=question2\n-ba
+cue_ringside_dubba2-3=question2\nDUB
+cue_ringside_dubba2-4=question2\n-BA
+cue_ringside_that2=question2\nthat
+cue_ringside_true2=question2\ntrue?
+cue_ringside_wubba3-1=question3\nwub
+cue_ringside_wubba3-2=question3\n-ba
+cue_ringside_dubba3-1=question3\ndub
+cue_ringside_dubba3-2=question3\n-ba
+cue_ringside_dubba3-3=question3\nDUB
+cue_ringside_dubba3-4=question3\n-BA
+cue_ringside_that3=question3\nthat
+cue_ringside_true3=question3\ntrue?
+cue_ringside_woah1=big guy1\nwoah,
+cue_ringside_you1=big guy1\nyou
+cue_ringside_go1=big guy1\ngo
+cue_ringside_big1=big guy1\nbig
+cue_ringside_guy1=big guy1\nguy!
+cue_ringside_woah2=big guy2\nwoah,
+cue_ringside_you2=big guy2\nyou
+cue_ringside_go2=big guy2\ngo
+cue_ringside_big2=big guy2\nbig
+cue_ringside_guy2=big guy2\nguy!
+cue_ringside_woah3=big guy3\nwoah,
+cue_ringside_you3=big guy3\nyou
+cue_ringside_go3=big guy3\ngo
+cue_ringside_big3=big guy3\nbig
+cue_ringside_guy3=big guy3\nguy!
+cue_ringside_pose1=pose1\npose
+cue_ringside_for1=pose1\nfor
+cue_ringside_the1=pose1\nthe
+cue_ringside_fans1=pose1\nfans!
+cue_ringside_pose2=pose2\npose
+cue_ringside_for2=pose2\nfor
+cue_ringside_the2=pose2\nthe
+cue_ringside_fans2=pose2\nfans!
+cue_ringside_poseAnd=and-pose\nand
+cue_ringside_pose3=and-pose\npose
+cue_ringside_for3=and-pose\nfor
+cue_ringside_the3=and-pose\nthe
+cue_ringside_fans3=and-pose\nfans!
