Added space dance cues

--- a/core/assets/localization/default.properties
+++ b/core/assets/localization/default.properties
@@ -21,6 +21,7 @@ game.donkDonk=Donk-Donk
 game.tapTroupe=Tap Troupe
 game.countIn=[PINK]Cues:[] Count-ins
 game.tapTrial=Tap Trial
+game.spaceDance=Space Dance
 
 cue_countIn_and=and
 cue_countIn_cowbell=cowbell
@@ -143,3 +144,20 @@ cue_ringside_pose3=and-pose\npose
 cue_ringside_for3=and-pose\nfor
 cue_ringside_the3=and-pose\nthe
 cue_ringside_fans3=and-pose\nfans!
+
+cue_spaceDance_turn1=dancers\nturn
+cue_spaceDance_right1=dancers\nright
+cue_spaceDance_lets1=dancers\nlet's
+cue_spaceDance_sit1=dancers\nsit
+cue_spaceDance_down1=dancers\ndown
+cue_spaceDance_pa1=dancers\npa
+cue_spaceDance_pun1=dancers\npun-
+cue_spaceDance_ch1=dancers\n~ch!
+cue_spaceDance_turn2=gramps\nturn
+cue_spaceDance_right2=gramps\nright
+cue_spaceDance_lets2=gramps\nlet's
+cue_spaceDance_sit2=gramps\nsit
+cue_spaceDance_down2=gramps\ndown
+cue_spaceDance_pa2=gramps\npa
+cue_spaceDance_pun2=gramps\npun-
+cue_spaceDance_ch2=gramps\n~ch!
