Punch cues are one cue now

--- a/core/assets/localization/default.properties
+++ b/core/assets/localization/default.properties
@@ -151,13 +151,11 @@ cue_spaceDance_lets1=dancers\nlet's
 cue_spaceDance_sit1=dancers\nsit
 cue_spaceDance_down1=dancers\ndown
 cue_spaceDance_pa1=dancers\npa
-cue_spaceDance_pun1=dancers\npun-
-cue_spaceDance_ch1=dancers\n~ch!
+cue_spaceDance_punch1=dancers\npunch!
 cue_spaceDance_turn2=gramps\nturn
 cue_spaceDance_right2=gramps\nright
 cue_spaceDance_lets2=gramps\nlet's
 cue_spaceDance_sit2=gramps\nsit
 cue_spaceDance_down2=gramps\ndown
 cue_spaceDance_pa2=gramps\npa
-cue_spaceDance_pun2=gramps\npun-
-cue_spaceDance_ch2=gramps\n~ch!
+cue_spaceDance_punch2=gramps\npunch!
