Updated failed I/O messages

--- a/core/assets/localization/default.properties
+++ b/core/assets/localization/default.properties
@@ -6,8 +6,8 @@ menu.openWarning=Are you sure you want to open an existing remix?\nAll unsaved c
 menu.music=Music: {0}
 menu.musicInvalid=[RED]Failed to load![]: {0}
 menu.clearMusicWarning=Are you sure you want to have no music?\nMusic's pretty important...
-menu.failedOpen=Failed to open the remix file. Error details in console (F8+C).
-menu.failedSave=Failed to save the remix file. Error details in console (F8+C).
+menu.failedOpen=Failed to open the remix file. It may not be a text file or isn't in JSON format. (Full error details are in the console, press F8+C).
+menu.failedSave=Failed to save the remix file. This shouldn't happen! Error details in console (F8+C).
 menu.successOpen=Opened successfully. Please note that music should be reloaded, if any.
 menu.successSave=Saved successfully.
 menu.dialogOpen=A file dialog is open - it may be behind this window.
