--- a/core/assets/localization/default.properties
+++ b/core/assets/localization/default.properties
@@ -14,6 +14,7 @@ menu.dialogOpen=A file dialog is open - it may be behind this window.
 
 editor.beat=beat 
 editor.musicStart=music start 
+editor.contributions=Cues contributed by {0}
 
 game.lockstep=Lockstep
 game.munchyMonk=Munchy Monk
