Added custom sound effect folder

--- a/core/assets/localization/default.properties
+++ b/core/assets/localization/default.properties
@@ -21,6 +21,7 @@ game.munchyMonk=Munchy Monk
 game.donkDonk=Donk-Donk
 game.tapTroupe=Tap Troupe
 game.countIn=[PINK]Cues:[] Count-ins
+game.customSound=[PINK]Custom SFX[]
 game.tapTrial=Tap Trial
 game.spaceDance=Space Dance
 
@@ -41,6 +42,7 @@ cue_lockstep_march1=march1
 cue_lockstep_march2=march2
 cue_lockstep_march1_bkbt=backbeat\nmarch1
 cue_lockstep_march2_bkbt=backbeat\nmarch2
+cue_lockstep_corruptHai=corrupt hai
 
 cue_munchyMonk_gulp=gulp
 cue_munchyMonk_gulp3-1=cue for 3\ngulp1
