Kind of fixed custom sound not working

--- a/core/assets/localization/default.properties
+++ b/core/assets/localization/default.properties
@@ -21,7 +21,7 @@ game.munchyMonk=Munchy Monk
 game.donkDonk=Donk-Donk
 game.tapTroupe=Tap Troupe
 game.countIn=[PINK]Cues:[] Count-ins
-game.customSound=[PINK]Custom SFX[]
+game.custom=[PINK]Custom SFX[]
 game.tapTrial=Tap Trial
 game.spaceDance=Space Dance
 
