--- a/core/assets/localization/default.properties
+++ b/core/assets/localization/default.properties
@@ -15,6 +15,8 @@ menu.dialogOpen=A file dialog is open - it may be behind this window.
 editor.beat=beat 
 editor.musicStart=music start 
 editor.contributions=Cues contributed by {0}
+editor.missingCustomWarning=If no custom sounds appear here, run the game through Command Prompt using the command\
+\njava -jar RhythmHeavenRemixer.jar\nor use the .bat file (Windows only).
 
 game.lockstep=Lockstep
 game.munchyMonk=Munchy Monk
