Added Blue Birds and Crop Stomp sfx without the cue assignment

--- a/core/assets/localization/default.properties
+++ b/core/assets/localization/default.properties
@@ -14,7 +14,7 @@ menu.dialogOpen=A file dialog is open - it may be behind this window.
 
 editor.beat=beat 
 editor.musicStart=music start 
-editor.contributions=Cues contributed by {0}
+editor.contributions=SFXs contributed by {0}
 editor.missingCustomWarning=If no custom sounds appear here, run the game through Command Prompt using the command\
 \njava -jar RhythmHeavenRemixer.jar\nor use the .bat file (Windows only).
 
@@ -26,6 +26,8 @@ game.countIn=[PINK]Cues:[] Count-ins
 game.custom=[PINK]Custom SFX[]
 game.tapTrial=Tap Trial
 game.spaceDance=Space Dance
+game.cropStomp=Crop Stomp
+game.blueBirds=Blue Birds
 
 cue_countIn_and=and
 cue_countIn_cowbell=cowbell
