Added localization for BB and CS

--- a/core/assets/localization/default.properties
+++ b/core/assets/localization/default.properties
@@ -166,3 +166,20 @@ cue_spaceDance_sit2=gramps\nsit
 cue_spaceDance_down2=gramps\ndown
 cue_spaceDance_pa2=gramps\npa
 cue_spaceDance_punch2=gramps\npunch!
+
+cue_blueBirds_peck=peck
+cue_blueBirds_peckyourbeak1=callout\npeck
+cue_blueBirds_peckyourbeak2=callout\nyour
+cue_blueBirds_peckyourbeak3=callout\nbeak!
+cue_blueBirds_stretch1=stretch\nbah
+cue_blueBirds_stretch2=stretch\nWAH!
+cue_blueBirds_stretchoutyourneck1=stretch\nstretch
+cue_blueBirds_stretchoutyourneck2=stretch\nout
+cue_blueBirds_stretchoutyourneck3=stretch\nyour
+cue_blueBirds_stretchoutyourneck4=stretch\nneck!
+
+cue_cropStomp_walk=walk
+cue_cropStomp_molefling=mole fling
+cue_cropStomp_pick1=pick1
+cue_cropStomp_pick2=pick2
+cue_cropStomp_stomp=stomp
