Added Karate Man icon and name

--- a/core/assets/localization/default.properties
+++ b/core/assets/localization/default.properties
@@ -28,6 +28,7 @@ game.tapTrial=Tap Trial
 game.spaceDance=Space Dance
 game.cropStomp=Crop Stomp
 game.blueBirds=Blue Birds
+game.karateMan=Karate Man
 
 cue_countIn_and=and
 cue_countIn_cowbell=cowbell
