Added version check

--- a/core/assets/localization/default.properties
+++ b/core/assets/localization/default.properties
@@ -17,6 +17,8 @@ editor.musicStart=music start
 editor.contributions=SFXs contributed by {0}
 editor.missingCustomWarning=If no custom sounds appear here, run the game through Command Prompt using the command\
 \njava -jar RhythmHeavenRemixer.jar\nor use the .bat file (Windows only).
+editor.newVersion={0} is available!
+editor.upToDate=You are up-to-date!
 
 game.lockstep=Lockstep
 game.munchyMonk=Munchy Monk
