--- a/core/assets/localization/default.properties
+++ b/core/assets/localization/default.properties
@@ -31,6 +31,7 @@ game.spaceDance=Space Dance
 game.cropStomp=Crop Stomp
 game.blueBirds=Blue Birds
 game.karateMan=Karate Man
+game.ringside=Ringside
 
 cue_countIn_and=and
 cue_countIn_cowbell=cowbell
@@ -98,8 +99,12 @@ cue_tapTrial_ookook2=ook-ook\n~ook!
 cue_tapTrial_tap=tap
 
 cue_ringside_ye=ye
-cue_ringside_yell=yell
-cue_ringside_camera=camera
+cue_ringside_yell1=yell1
+cue_ringside_camera1=camera1
+cue_ringside_yell2=yell2
+cue_ringside_camera2=camera2
+cue_ringside_yell3=yell3
+cue_ringside_camera3=camera3
 cue_ringside_muscles1=muscles1
 cue_ringside_muscles2=muscles2
 cue_ringside_wubba1-1=question1\nwub
