Added Shoot 'Em Up cues + Launch Party icon

--- a/core/assets/localization/default.properties
+++ b/core/assets/localization/default.properties
@@ -32,6 +32,8 @@ game.cropStomp=Crop Stomp
 game.blueBirds=Blue Birds
 game.karateMan=Karate Man
 game.ringside=Ringside
+game.shootEmUp=Shoot 'Em Up
+game.launchParty=Launch Party
 
 cue_countIn_and=and
 cue_countIn_cowbell=cowbell
@@ -191,3 +193,8 @@ cue_cropStomp_molefling=mole fling
 cue_cropStomp_pick1=pick1
 cue_cropStomp_pick2=pick2
 cue_cropStomp_stomp=stomp
+
+cue_shootEmUp_shoot=shoot
+cue_shootEmUp_spawn=spawn
+cue_shootEmUp_commStart=comms start
+cue_shootEmUp_commEnd=comms end
