Added Working Dough

--- a/core/assets/localization/default.properties
+++ b/core/assets/localization/default.properties
@@ -34,6 +34,7 @@ game.karateMan=Karate Man
 game.ringside=Ringside
 game.shootEmUp=Shoot 'Em Up
 game.launchParty=Launch Party
+game.workingDough=Working Dough
 
 cue_countIn_and=and
 cue_countIn_cowbell=cowbell
@@ -198,3 +199,8 @@ cue_shootEmUp_shoot=shoot
 cue_shootEmUp_spawn=spawn
 cue_shootEmUp_commStart=comms start
 cue_shootEmUp_commEnd=comms end
+
+cue_workingDough_leftSmall=left small
+cue_workingDough_leftBig=left big
+cue_workingDough_rightSmall=right small
+cue_workingDough_rightBig=right big
