Added resizability in editor

--- a/core/assets/localization/default.properties
+++ b/core/assets/localization/default.properties
@@ -214,3 +214,4 @@ cue_moaiDooWop2_d2=2\nd
 cue_moaiDooWop2_ooo2=2\nooo
 cue_moaiDooWop2_wop2=2\nwop
 cue_moaiDooWop2_pah2=2\npah
+cue_moaiDooWop2_stoneGrind=stone move
