Changed name from MDW2 to just MDW

--- a/core/assets/localization/default.properties
+++ b/core/assets/localization/default.properties
@@ -35,7 +35,7 @@ game.ringside=Ringside
 game.shootEmUp=Shoot 'Em Up
 game.launchParty=Launch Party
 game.workingDough=Working Dough
-game.moaiDooWop2=Moai Doo-Wop 2
+game.moaiDooWop=Moai Doo-Wop
 
 cue_countIn_and=and
 cue_countIn_cowbell=cowbell
@@ -206,12 +206,12 @@ cue_workingDough_leftBig=left big
 cue_workingDough_rightSmall=right small
 cue_workingDough_rightBig=right big
 
-cue_moaiDooWop2_d1=1\nd
-cue_moaiDooWop2_ooo1=1\nooo
-cue_moaiDooWop2_wop1=1\nwop
-cue_moaiDooWop2_pah1=1\npah
-cue_moaiDooWop2_d2=2\nd
-cue_moaiDooWop2_ooo2=2\nooo
-cue_moaiDooWop2_wop2=2\nwop
-cue_moaiDooWop2_pah2=2\npah
-cue_moaiDooWop2_stoneGrind=stone move
+cue_moaiDooWop_d1=1\nd
+cue_moaiDooWop_ooo1=1\nooo
+cue_moaiDooWop_wop1=1\nwop
+cue_moaiDooWop_pah1=1\npah
+cue_moaiDooWop_d2=2\nd
+cue_moaiDooWop_ooo2=2\nooo
+cue_moaiDooWop_wop2=2\nwop
+cue_moaiDooWop_pah2=2\npah
+cue_moaiDooWop_stoneGrind=stone move
