Added Dog Ninja

--- a/core/assets/localization/default.properties
+++ b/core/assets/localization/default.properties
@@ -36,6 +36,7 @@ game.shootEmUp=Shoot 'Em Up
 game.launchParty=Launch Party
 game.workingDough=Working Dough
 game.moaiDooWop=Moai Doo-Wop
+game.dogNinja=Dog Ninja
 
 cue_countIn_and=and
 cue_countIn_cowbell=cowbell
