Added dog ninja localization

--- a/core/assets/localization/default.properties
+++ b/core/assets/localization/default.properties
@@ -216,3 +216,12 @@ cue_moaiDooWop_ooo2=2\nooo
 cue_moaiDooWop_wop2=2\nwop
 cue_moaiDooWop_pah2=2\npah
 cue_moaiDooWop_stoneGrind=stone move
+
+cue_dogNinja_bone1=bone throw
+cue_dogNinja_bone2=bone slice
+cue_dogNinja_fruit1=fruit throw
+cue_dogNinja_fruit2=fruit slice
+cue_dogNinja_pan1=pan throw
+cue_dogNinja_pan2=pan slice
+cue_dogNinja_tire1=tire throw
+cue_dogNinja_tire2=tire slice
