Added Shrimp Shuffle

--- a/core/assets/localization/default.properties
+++ b/core/assets/localization/default.properties
@@ -37,6 +37,7 @@ game.launchParty=Launch Party
 game.workingDough=Working Dough
 game.moaiDooWop=Moai Doo-Wop
 game.dogNinja=Dog Ninja
+game.shrimpShuffle=Shrimp Shuffle
 
 cue_countIn_and=and
 cue_countIn_cowbell=cowbell
@@ -225,3 +226,20 @@ cue_dogNinja_pan1=pan throw
 cue_dogNinja_pan2=pan slice
 cue_dogNinja_tire1=tire throw
 cue_dogNinja_tire2=tire slice
+
+cue_shrimpShuffle_to=to
+cue_shrimpShuffle_ge=ge
+cue_shrimpShuffle_ther=ther
+cue_shrimpShuffle_one1=one1
+cue_shrimpShuffle_two1=two1
+cue_shrimpShuffle_three1=three1
+cue_shrimpShuffle_three2=three2
+cue_shrimpShuffle_two2=two2
+cue_shrimpShuffle_one2=one2
+cue_shrimpShuffle_a=A
+cue_shrimpShuffle_b=B
+cue_shrimpShuffle_c=C
+cue_shrimpShuffle_ah=ah
+cue_shrimpShuffle_wa=wa
+cue_shrimpShuffle_ha=ha
+cue_shrimpShuffle_uhn=uhn
