Added karate man DS cues

--- a/core/assets/localization/default.properties
+++ b/core/assets/localization/default.properties
@@ -243,3 +243,14 @@ cue_shrimpShuffle_ah=ah
 cue_shrimpShuffle_wa=wa
 cue_shrimpShuffle_ha=ha
 cue_shrimpShuffle_uhn=uhn
+
+cue_karateMan_barrelout=barrel out
+cue_karateMan_bulbhit=lightbulb hit
+cue_karateMan_bulbout=lightbulb out
+cue_karateMan_hit3cue1=hit-
+cue_karateMan_hit3cue2=three!
+cue_karateMan_offbeatpotout=offbeat pot out
+cue_karateMan_pothit=pot hit
+cue_karateMan_potout=pot out
+cue_karateMan_punchkick1=punch-
+cue_karateMan_punchkick2=KICK!
