Added Rhythm Rally

--- a/core/assets/localization/default.properties
+++ b/core/assets/localization/default.properties
@@ -254,3 +254,10 @@ cue_karateMan_pothit=pot hit
 cue_karateMan_potout=pot out
 cue_karateMan_punchkick1=punch-
 cue_karateMan_punchkick2=KICK!
+
+cue_rhythmRally_hit1=bounce1
+cue_rhythmRally_hit2=bounce2
+cue_rhythmRally_hit3=bounce3
+cue_rhythmRally_tonk=tonk
+cue_rhythmRally_tink=tink
+cue_rhythmRally_whistle=whistle
