Added space soccer, fixed missing rhythm rally name

--- a/core/assets/localization/default.properties
+++ b/core/assets/localization/default.properties
@@ -38,6 +38,8 @@ game.workingDough=Working Dough
 game.moaiDooWop=Moai Doo-Wop
 game.dogNinja=Dog Ninja
 game.shrimpShuffle=Shrimp Shuffle
+game.rhythmRally=Rhythm Rally
+game.spaceSoccer=Space Soccer
 
 cue_countIn_and=and
 cue_countIn_cowbell=cowbell
@@ -261,3 +263,13 @@ cue_rhythmRally_hit3=bounce3
 cue_rhythmRally_tonk=tonk
 cue_rhythmRally_tink=tink
 cue_rhythmRally_whistle=whistle
+
+cue_spaceSoccer_dispense1=ball dispense\n1
+cue_spaceSoccer_dispense2=2
+cue_spaceSoccer_dispense3=3
+cue_spaceSoccer_dispense4=4
+cue_spaceSoccer_dispense5=5
+cue_spaceSoccer_highkicklow1=high!
+cue_spaceSoccer_highkicklow2=~kick-
+cue_spaceSoccer_highkicklow3=low!
+cue_spaceSoccer_kick=kick
