Changed credit to Contributions by

--- a/core/assets/localization/default.properties
+++ b/core/assets/localization/default.properties
@@ -14,7 +14,7 @@ menu.dialogOpen=A file dialog is open - it may be behind this window.
 
 editor.beat=beat 
 editor.musicStart=music start 
-editor.contributions=SFXs contributed by {0}
+editor.contributions=Contributions by {0}
 editor.missingCustomWarning=If no custom sounds appear here, run the game through Command Prompt using the command\
 \njava -jar RhythmHeavenRemixer.jar\nor use the .bat file (Windows only).
 editor.newVersion={0} is available!
