Added micro row game base

--- a/core/assets/localization/default.properties
+++ b/core/assets/localization/default.properties
@@ -40,6 +40,7 @@ game.dogNinja=Dog Ninja
 game.shrimpShuffle=Shrimp Shuffle
 game.rhythmRally=Rhythm Rally
 game.spaceSoccer=Space Soccer
+game.microRow=Micro Row
 
 cue_countIn_and=and
 cue_countIn_cowbell=cowbell
