--- a/core/assets/localization/default.properties
+++ b/core/assets/localization/default.properties
@@ -40,7 +40,7 @@ game.dogNinja=Dog Ninja
 game.shrimpShuffle=Shrimp Shuffle
 game.rhythmRally=Rhythm Rally
 game.spaceSoccer=Space Soccer
-game.microRow=Micro Row
+game.microRow=Micro-Row
 
 cue_countIn_and=and
 cue_countIn_cowbell=cowbell
@@ -274,3 +274,11 @@ cue_spaceSoccer_highkicklow1=high!
 cue_spaceSoccer_highkicklow2=~kick-
 cue_spaceSoccer_highkicklow3=low!
 cue_spaceSoccer_kick=kick
+
+cue_microRow_dash1=dash\ntweet-
+cue_microRow_dash2=dash\nTWEET!
+cue_microRow_ding=ding
+cue_microRow_go=go
+cue_microRow_triple1=triple1
+cue_microRow_triple2=triple2
+cue_microRow_triple3=triple3
