Added Clappy Trio

--- a/core/assets/localization/default.properties
+++ b/core/assets/localization/default.properties
@@ -41,6 +41,7 @@ game.shrimpShuffle=Shrimp Shuffle
 game.rhythmRally=Rhythm Rally
 game.spaceSoccer=Space Soccer
 game.microRow=Micro-Row
+game.clappyTrio=Clappy Trio
 
 cue_countIn_and=and
 cue_countIn_cowbell=cowbell
@@ -282,3 +283,6 @@ cue_microRow_go=go
 cue_microRow_triple1=triple1
 cue_microRow_triple2=triple2
 cue_microRow_triple3=triple3
+
+cue_clappyTrio_clap=clap
+cue_clappyTrio_ready=ready
