Added Wizard's Waltz totally, Vegeta-Pull stuff

--- a/core/assets/localization/default.properties
+++ b/core/assets/localization/default.properties
@@ -42,6 +42,8 @@ game.rhythmRally=Rhythm Rally
 game.spaceSoccer=Space Soccer
 game.microRow=Micro-Row
 game.clappyTrio=Clappy Trio
+game.vegetaPull=Vegeta-Pull
+game.wizardWaltz=Wizard's Waltz
 
 cue_countIn_and=and
 cue_countIn_cowbell=cowbell
@@ -286,3 +288,8 @@ cue_microRow_triple3=triple3
 
 cue_clappyTrio_clap=clap
 cue_clappyTrio_ready=ready
+
+cue_wizardWaltz_grow=grow
+cue_wizardWaltz_plant=plant
+
+cue_vegetaPull_
