Moai Doo-Wop is a lot less painful

--- a/core/assets/localization/default.properties
+++ b/core/assets/localization/default.properties
@@ -215,11 +215,11 @@ cue_workingDough_rightSmall=right small
 cue_workingDough_rightBig=right big
 
 cue_moaiDooWop_d1=1\nd
-cue_moaiDooWop_ooo1=1\nooo
+cue_moaiDooWop_ooo1=1\ndooo
 cue_moaiDooWop_wop1=1\nwop
 cue_moaiDooWop_pah1=1\npah
 cue_moaiDooWop_d2=2\nd
-cue_moaiDooWop_ooo2=2\nooo
+cue_moaiDooWop_ooo2=2\ndooo
 cue_moaiDooWop_wop2=2\nwop
 cue_moaiDooWop_pah2=2\npah
 cue_moaiDooWop_stoneGrind=stone move
@@ -292,4 +292,10 @@ cue_clappyTrio_ready=ready
 cue_wizardWaltz_grow=grow
 cue_wizardWaltz_plant=plant
 
-cue_vegetaPull_
+cue_vegetaPull_appear=appear
+cue_vegetaPull_longAppear=long appear
+cue_vegetaPull_pluck=pluck
+cue_vegetaPull_gr=gr
+cue_vegetaPull_aaa=graaa-
+cue_vegetaPull_b=~b!
+cue_vegetaPull_cashier=cashier
