Added Glee Club - missing together now cues

--- a/core/assets/localization/default.properties
+++ b/core/assets/localization/default.properties
@@ -44,6 +44,7 @@ game.microRow=Micro-Row
 game.clappyTrio=Clappy Trio
 game.vegetaPull=Vegeta-Pull
 game.wizardWaltz=Wizard's Waltz
+game.gleeClub=Glee Club
 
 cue_countIn_and=and
 cue_countIn_cowbell=cowbell
@@ -299,3 +300,9 @@ cue_vegetaPull_gr=gr
 cue_vegetaPull_aaa=graaa-
 cue_vegetaPull_b=~b!
 cue_vegetaPull_cashier=cashier
+
+cue_gleeClub_singLoop=aaah
+cue_gleeClub_singEnd=mouth shut
+cue_gleeClub_singBegin=a-
+cue_gleeClub_togetherNow=together now!
+cue_gleeClub_scream=WAAHH!
