--- a/core/assets/localization/default.properties
+++ b/core/assets/localization/default.properties
@@ -45,6 +45,7 @@ game.clappyTrio=Clappy Trio
 game.vegetaPull=Vegeta-Pull
 game.wizardWaltz=Wizard's Waltz
 game.gleeClub=Glee Club
+game.fillbots=Fillbots
 
 cue_countIn_and=and
 cue_countIn_cowbell=cowbell
@@ -306,3 +307,10 @@ cue_gleeClub_singEnd=mouth shut
 cue_gleeClub_singBegin=a-
 cue_gleeClub_togetherNow=together now!
 cue_gleeClub_scream=WAAHH!
+
+cue_fillbots_mediumFall=medium fall
+cue_fillbots_bigFall=large fall
+cue_fillbots_smallFall=small fall
+cue_fillbots_mediumBot=medium fill
+cue_fillbots_bigBot=large fill
+cue_fillbots_smallBot=small fill
