Added pitch changing ability

--- a/core/assets/localization/default.properties
+++ b/core/assets/localization/default.properties
@@ -19,6 +19,9 @@ editor.missingCustomWarning=If no custom sounds appear here, run the game throug
 \njava -jar RhythmHeavenRemixer.jar\nor use the .bat file (Windows only).
 editor.newVersion={0} is available!
 editor.upToDate=You are up-to-date!
+editor.selected={0,number,integer} selected
+editor.resizeInfo=, [PINK]drag edges[] of cue to [CYAN]resize[]
+editor.semitoneInfo=, [PINK]scroll[] to [CYAN]change note[]
 
 game.lockstep=Lockstep
 game.munchyMonk=Munchy Monk
