--- a/core/assets/localization/default.properties
+++ b/core/assets/localization/default.properties
@@ -1,4 +1,4 @@
-gamename=Rhythm Heaven Audio Remixer
+gamename=Rhythm Heaven Remix Editor
 
 menu.exitWarning=Are you sure you want to exit?\nAll unsaved changes will be lost.
 menu.newWarning=Are you sure you want to start a new remix?\nAll unsaved changes will be lost.
