--- a/core/assets/localization/default.properties
+++ b/core/assets/localization/default.properties
@@ -49,6 +49,7 @@ game.vegetaPull=Vegeta-Pull
 game.wizardWaltz=Wizard's Waltz
 game.gleeClub=Glee Club
 game.fillbots=Fillbots
+game.lockstep2=Lockstep 2
 
 cue_countIn_and=and
 cue_countIn_cowbell=cowbell
@@ -58,15 +59,15 @@ cue_countIn_three=three
 cue_countIn_four=four
 
 cue_lockstep_hai=hai
-cue_lockstep_bkbt_ha=backbeat\nha
-cue_lockstep_bkbt_hoi=backbeat\nhoi
-cue_lockstep_bkbt_boh=backbeat\nboh
-cue_lockstep_return_hee=return\nhee
-cue_lockstep_return_ha=return\nha
+cue_lockstep_bkbt_ha=bkbt\nha
+cue_lockstep_bkbt_hoi=bkbt\nhoi
+cue_lockstep_bkbt_boh=bkbt\nboh
+cue_lockstep_return_hee=rtrn\nhee
+cue_lockstep_return_ha=rtrn\nha
 cue_lockstep_march1=march1
 cue_lockstep_march2=march2
-cue_lockstep_march1_bkbt=backbeat\nmarch1
-cue_lockstep_march2_bkbt=backbeat\nmarch2
+cue_lockstep_march1_bkbt=bkbt\nmarch1
+cue_lockstep_march2_bkbt=bkbt\nmarch2
 cue_lockstep_corruptHai=corrupt hai
 
 cue_munchyMonk_gulp=gulp
