--- a/core/assets/localization/default.properties
+++ b/core/assets/localization/default.properties
@@ -27,7 +27,7 @@ game.lockstep=Lockstep
 game.munchyMonk=Munchy Monk
 game.donkDonk=Donk-Donk
 game.tapTroupe=Tap Troupe
-game.countIn=[PINK]Cues:[] Count-ins
+game.countIn=[PINK]Cues: Count-ins
 game.custom=[PINK]Custom SFX[]
 game.tapTrial=Tap Trial
 game.spaceDance=Space Dance
