Added name for silence

--- a/core/assets/localization/default.properties
+++ b/core/assets/localization/default.properties
@@ -57,6 +57,7 @@ cue_countIn_one=one
 cue_countIn_two=two
 cue_countIn_three=three
 cue_countIn_four=four
+cue_countIn_silence=silence
 
 cue_lockstep_hai=hai
 cue_lockstep_bkbt_ha=bkbt\nha
