--- a/core/assets/localization/default.properties
+++ b/core/assets/localization/default.properties
@@ -21,7 +21,7 @@ editor.newVersion={0} is available!
 editor.upToDate=You are up-to-date!
 editor.selected={0,number,integer} selected
 editor.resizeInfo=, [PINK]drag edges[] of cue to [CYAN]resize[]
-editor.semitoneInfo=, [PINK]scroll[] to [CYAN]change note[]
+editor.semitoneInfo=, [PINK]scroll[] to [CYAN]change the note[]
 
 game.lockstep=Lockstep
 game.munchyMonk=Munchy Monk
