Added Built to Scale (DS)

--- a/core/assets/localization/default.properties
+++ b/core/assets/localization/default.properties
@@ -50,6 +50,7 @@ game.wizardWaltz=Wizard's Waltz
 game.gleeClub=Glee Club
 game.fillbots=Fillbots
 game.lockstep2=Lockstep 2
+game.builtToScaleDS=Built to Scale (DS)
 
 cue_countIn_and=and
 cue_countIn_cowbell=cowbell
@@ -319,3 +320,6 @@ cue_fillbots_smallFall=small fall
 cue_fillbots_mediumBot=medium fill
 cue_fillbots_bigBot=large fill
 cue_fillbots_smallBot=small fill
+
+cue_builtToScaleDS_c=note
+cue_builtToScaleDS_pew=pew
