Added Cosmo Dance

--- a/core/assets/localization/default.properties
+++ b/core/assets/localization/default.properties
@@ -51,6 +51,7 @@ game.gleeClub=Glee Club
 game.fillbots=Fillbots
 game.lockstep2=Lockstep 2
 game.builtToScaleDS=Built to Scale (DS)
+game.cosmoDance=Cosmo Dance
 
 cue_countIn_and=and
 cue_countIn_cowbell=cowbell
