Added Hopping Road

--- a/core/assets/localization/default.properties
+++ b/core/assets/localization/default.properties
@@ -52,6 +52,7 @@ game.fillbots=Fillbots
 game.lockstep2=Lockstep 2
 game.builtToScaleDS=Built to Scale (DS)
 game.cosmoDance=Cosmo Dance
+game.hoppingRoad=Hopping Road
 
 cue_countIn_and=and
 cue_countIn_cowbell=cowbell
@@ -128,30 +129,30 @@ cue_ringside_yell3=yell3
 cue_ringside_camera3=camera3
 cue_ringside_muscles1=muscles1
 cue_ringside_muscles2=muscles2
-cue_ringside_wubba1-1=question1\nwub
-cue_ringside_wubba1-2=question1\n-ba
-cue_ringside_dubba1-1=question1\ndub
-cue_ringside_dubba1-2=question1\n-ba
-cue_ringside_dubba1-3=question1\nDUB
-cue_ringside_dubba1-4=question1\n-BA
-cue_ringside_that1=question1\nthat
-cue_ringside_true1=question1\ntrue?
-cue_ringside_wubba2-1=question2\nwub
-cue_ringside_wubba2-2=question2\n-ba
-cue_ringside_dubba2-1=question2\ndub
-cue_ringside_dubba2-2=question2\n-ba
-cue_ringside_dubba2-3=question2\nDUB
-cue_ringside_dubba2-4=question2\n-BA
-cue_ringside_that2=question2\nthat
-cue_ringside_true2=question2\ntrue?
-cue_ringside_wubba3-1=question3\nwub
-cue_ringside_wubba3-2=question3\n-ba
-cue_ringside_dubba3-1=question3\ndub
-cue_ringside_dubba3-2=question3\n-ba
-cue_ringside_dubba3-3=question3\nDUB
-cue_ringside_dubba3-4=question3\n-BA
-cue_ringside_that3=question3\nthat
-cue_ringside_true3=question3\ntrue?
+cue_ringside_wubba1-1=q1\nwub
+cue_ringside_wubba1-2=q1\n-ba
+cue_ringside_dubba1-1=q1\ndub
+cue_ringside_dubba1-2=q1\n-ba
+cue_ringside_dubba1-3=q1\nDUB
+cue_ringside_dubba1-4=q1\n-BA
+cue_ringside_that1=q1\nthat
+cue_ringside_true1=q1\ntrue?
+cue_ringside_wubba2-1=q2\nwub
+cue_ringside_wubba2-2=q2\n-ba
+cue_ringside_dubba2-1=q2\ndub
+cue_ringside_dubba2-2=q2\n-ba
+cue_ringside_dubba2-3=q2\nDUB
+cue_ringside_dubba2-4=q2\n-BA
+cue_ringside_that2=q2\nthat
+cue_ringside_true2=q2\ntrue?
+cue_ringside_wubba3-1=q3\nwub
+cue_ringside_wubba3-2=q3\n-ba
+cue_ringside_dubba3-1=q3\ndub
+cue_ringside_dubba3-2=q3\n-ba
+cue_ringside_dubba3-3=q3\nDUB
+cue_ringside_dubba3-4=q3\n-BA
+cue_ringside_that3=q3\nthat
+cue_ringside_true3=q3\ntrue?
 cue_ringside_woah1=big guy1\nwoah,
 cue_ringside_you1=big guy1\nyou
 cue_ringside_go1=big guy1\ngo
@@ -324,3 +325,6 @@ cue_fillbots_smallBot=small fill
 
 cue_builtToScaleDS_c=note
 cue_builtToScaleDS_pew=pew
+
+cue_hoppingRoad_tink=tink
+cue_hoppingRoad_cymbal=cymbal
