Added Love Lizards

--- a/core/assets/localization/default.properties
+++ b/core/assets/localization/default.properties
@@ -53,6 +53,7 @@ game.lockstep2=Lockstep 2
 game.builtToScaleDS=Built to Scale (DS)
 game.cosmoDance=Cosmo Dance
 game.hoppingRoad=Hopping Road
+game.loveLizards=Love Lizards
 
 cue_countIn_and=and
 cue_countIn_cowbell=cowbell
@@ -328,3 +329,9 @@ cue_builtToScaleDS_pew=pew
 
 cue_hoppingRoad_tink=tink
 cue_hoppingRoad_cymbal=cymbal
+
+cue_loveLizards_bzzt1=bzzt1
+cue_loveLizards_bzzt2=bzzt2
+cue_loveLizards_bzzt3=bzzt3
+cue_loveLizards_bzzt4=bzzt4
+cue_loveLizards_happy=chirp
