Added Exhibition Match cues + Launch Party class

--- a/core/assets/localization/default.properties
+++ b/core/assets/localization/default.properties
@@ -54,6 +54,7 @@ game.builtToScaleDS=Built to Scale (DS)
 game.cosmoDance=Cosmo Dance
 game.hoppingRoad=Hopping Road
 game.loveLizards=Love Lizards
+game.exhibitionMatch=Exhibition Match
 
 cue_countIn_and=and
 cue_countIn_cowbell=cowbell
@@ -335,3 +336,8 @@ cue_loveLizards_bzzt2=bzzt2
 cue_loveLizards_bzzt3=bzzt3
 cue_loveLizards_bzzt4=bzzt4
 cue_loveLizards_happy=chirp
+
+cue_exhibitionMatch_stance=stance
+cue_exhibitionMatch_throw=throw
+cue_exhibitionMatch_hit=hit
+cue_exhibitionMatch_hitHomerun=home run
