Added rock and hit 4

--- a/core/assets/localization/default.properties
+++ b/core/assets/localization/default.properties
@@ -267,11 +267,13 @@ cue_karateMan_bulbhit=lightbulb hit
 cue_karateMan_bulbout=lightbulb out
 cue_karateMan_hit3cue1=hit-
 cue_karateMan_hit3cue2=three!
+cue_karateMan_hit4=four!
 cue_karateMan_offbeatpotout=offbeat pot out
 cue_karateMan_pothit=pot hit
 cue_karateMan_potout=pot out
 cue_karateMan_punchkick1=punch-
 cue_karateMan_punchkick2=KICK!
+cue_karateMan_rock=rock hit
 
 cue_rhythmRally_hit1=bounce1
 cue_rhythmRally_hit2=bounce2
