Added punchy punchy ko pow

--- a/core/assets/localization/default.properties
+++ b/core/assets/localization/default.properties
@@ -274,6 +274,12 @@ cue_karateMan_potout=pot out
 cue_karateMan_punchkick1=punch-
 cue_karateMan_punchkick2=KICK!
 cue_karateMan_rock=rock hit
+cue_karateMan_punchy1=pun-
+cue_karateMan_punchy2=chy
+cue_karateMan_punchy3=PUN-
+cue_karateMan_punchy4=CHY
+cue_karateMan_ko=ko
+cue_karateMan_pow=pow!
 
 cue_rhythmRally_hit1=bounce1
 cue_rhythmRally_hit2=bounce2
