Added Launch Party

--- a/core/assets/localization/default.properties
+++ b/core/assets/localization/default.properties
@@ -275,10 +275,10 @@ cue_karateMan_punchkick1=punch-
 cue_karateMan_punchkick2=KICK!
 cue_karateMan_rock=rock hit
 cue_karateMan_punchy1=pun-
-cue_karateMan_punchy2=chy
+cue_karateMan_punchy2=cha
 cue_karateMan_punchy3=PUN-
-cue_karateMan_punchy4=CHY
-cue_karateMan_ko=ko
+cue_karateMan_punchy4=CHA
+cue_karateMan_ko=ka
 cue_karateMan_pow=pow!
 
 cue_rhythmRally_hit1=bounce1
@@ -349,3 +349,24 @@ cue_exhibitionMatch_stance=stance
 cue_exhibitionMatch_throw=throw
 cue_exhibitionMatch_hit=hit
 cue_exhibitionMatch_hitHomerun=home run
+
+cue_launchParty_one=one\n1
+cue_launchParty_one-go=one\ngo
+cue_launchParty_three-3=three\n3
+cue_launchParty_three-2=three\n2
+cue_launchParty_three-1=three\n1
+cue_launchParty_three-go=three\ngo
+cue_launchParty_five-5=five\n5
+cue_launchParty_five-4=five\n4
+cue_launchParty_five-3=five\n3
+cue_launchParty_five-2=five\n2
+cue_launchParty_five-1=five\n1
+cue_launchParty_five-go=five\ngo
+cue_launchParty_seven-7=seven\n7
+cue_launchParty_seven-6=seven\n6
+cue_launchParty_seven-5=seven\n5
+cue_launchParty_seven-4=seven\n4
+cue_launchParty_seven-3=seven\n3
+cue_launchParty_seven-2=seven\n2
+cue_launchParty_seven-1=seven\n1
+cue_launchParty_seven-go=seven\ngo
