--- a/core/assets/localization/default.properties
+++ b/core/assets/localization/default.properties
@@ -350,23 +350,23 @@ cue_exhibitionMatch_throw=throw
 cue_exhibitionMatch_hit=hit
 cue_exhibitionMatch_hitHomerun=home run
 
-cue_launchParty_one=one\n1
-cue_launchParty_one-go=one\ngo
-cue_launchParty_three-3=three\n3
-cue_launchParty_three-2=three\n2
-cue_launchParty_three-1=three\n1
-cue_launchParty_three-go=three\ngo
-cue_launchParty_five-5=five\n5
-cue_launchParty_five-4=five\n4
-cue_launchParty_five-3=five\n3
-cue_launchParty_five-2=five\n2
-cue_launchParty_five-1=five\n1
-cue_launchParty_five-go=five\ngo
-cue_launchParty_seven-7=seven\n7
-cue_launchParty_seven-6=seven\n6
-cue_launchParty_seven-5=seven\n5
-cue_launchParty_seven-4=seven\n4
-cue_launchParty_seven-3=seven\n3
-cue_launchParty_seven-2=seven\n2
-cue_launchParty_seven-1=seven\n1
-cue_launchParty_seven-go=seven\ngo
+cue_launchParty_one=1\n1
+cue_launchParty_one-go=1\ngo
+cue_launchParty_three-3=3\n3
+cue_launchParty_three-2=3\n2
+cue_launchParty_three-1=3\n1
+cue_launchParty_three-go=3\ngo
+cue_launchParty_five-5=5\n5
+cue_launchParty_five-4=5\n4
+cue_launchParty_five-3=5\n3
+cue_launchParty_five-2=5\n2
+cue_launchParty_five-1=5\n1
+cue_launchParty_five-go=5\ngo
+cue_launchParty_seven-7=7\n7
+cue_launchParty_seven-6=7\n6
+cue_launchParty_seven-5=7\n5
+cue_launchParty_seven-4=7\n4
+cue_launchParty_seven-3=7\n3
+cue_launchParty_seven-2=7\n2
+cue_launchParty_seven-1=7\n1
+cue_launchParty_seven-go=7\ngo
