Added Air Batter and Ninja

--- a/core/assets/localization/default.properties
+++ b/core/assets/localization/default.properties
@@ -55,6 +55,8 @@ game.cosmoDance=Cosmo Dance
 game.hoppingRoad=Hopping Road
 game.loveLizards=Love Lizards
 game.exhibitionMatch=Exhibition Match
+game.ninja=Ninja
+game.airBatter=Air Batter
 
 cue_countIn_and=and
 cue_countIn_cowbell=cowbell
@@ -370,3 +372,9 @@ cue_launchParty_seven-3=7\n3
 cue_launchParty_seven-2=7\n2
 cue_launchParty_seven-1=7\n1
 cue_launchParty_seven-go=7\ngo
+
+cue_ninja_shoot=shoot
+cue_ninja_cut=cut
+
+cue_airBatter_shoot=shoot
+cue_airBatter_hit=hit
