Added Dr. Bacteria

--- a/core/assets/localization/default.properties
+++ b/core/assets/localization/default.properties
@@ -57,6 +57,7 @@ game.loveLizards=Love Lizards
 game.exhibitionMatch=Exhibition Match
 game.ninja=Ninja
 game.airBatter=Air Batter
+game.drBacteria=Dr. Bacteria
 
 cue_countIn_and=and
 cue_countIn_cowbell=cowbell
@@ -378,3 +379,6 @@ cue_ninja_cut=cut
 
 cue_airBatter_shoot=shoot
 cue_airBatter_hit=hit
+
+cue_drBacteria_appear=appear
+cue_drBacteria_stab=stab
