--- a/core/assets/localization/default.properties
+++ b/core/assets/localization/default.properties
@@ -58,6 +58,7 @@ game.exhibitionMatch=Exhibition Match
 game.ninja=Ninja
 game.airBatter=Air Batter
 game.drBacteria=Dr. Bacteria
+game.frogHop=Frog Hop
 
 cue_countIn_and=and
 cue_countIn_cowbell=cowbell
@@ -382,3 +383,21 @@ cue_airBatter_hit=hit
 
 cue_drBacteria_appear=appear
 cue_drBacteria_stab=stab
+
+cue_frogHop_shake=shake
+cue_frogHop_one=one
+cue_frogHop_two=two
+cue_frogHop_three=three
+cue_frogHop_four=four
+cue_frogHop_yeah1=lead\nyeah
+cue_frogHop_yeah2=boys\nyeah
+cue_frogHop_yahoo1=lead\nya-
+cue_frogHop_yahoo2=lead\n~hoo
+cue_frogHop_yahoo3=boys\nya-
+cue_frogHop_yahoo4=boys\n~hoo
+cue_frogHop_spinitboys1=lead\nspin
+cue_frogHop_spinitboys2=lead\nit
+cue_frogHop_spinitboys3=lead\nboys!
+cue_frogHop_spinitboys4=boys\nspin
+cue_frogHop_spinitboys5=boys\nit
+cue_frogHop_spinitboys6=boys\nboys!
