Added longShoot to AB

--- a/core/assets/localization/default.properties
+++ b/core/assets/localization/default.properties
@@ -380,6 +380,7 @@ cue_ninja_cut=cut
 
 cue_airBatter_shoot=shoot
 cue_airBatter_hit=hit
+cue_airBatter_longShoot=long shoot
 
 cue_drBacteria_appear=appear
 cue_drBacteria_stab=stab
